testdata/golden/sema/invalid/concurrency/task_escape_global.sg
// ERROR: Task<T> in module-level variable

async fn work() -> int {
    return 42;
}

// ERROR SEM3108: cannot store Task<T> in module-level variable
pub let GLOBAL_TASK: Task<int> = task work();
